add scss & media

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   </div>
                   <input type="text" onkeypress="validate(event)" maxlength="3" placeholder="Процентная ставка" class="pros">
                   <input type="checkbox" class="addPros">
-                  <span>Сложный процент</span>
+                  <span class="spanm">Сложный процент</span>
                </div>
             </div>
             <div class="calc__right-form"> <!-- column -->
@@ -49,7 +49,7 @@
    </div>
    <div class="option">
       <button class="optionBtn">↯</button>
-      <p class="optinonText">
+      <p class="optinonText hide">
          При использовании сложного процента происходит регулярный перерасчёт: к стартовой сумме прибавляется доход за определённый срок (месяц) и далее вознаграждение начисляется уже на увеличенный размер вложений.
       </p>
    </div>
